--- a/theme/assets/css/custom.css
+++ b/theme/assets/css/custom.css
@@ -7,6 +7,10 @@
   color: black;
 }
 
+.header .nav > li > a:hover {
+  color: gray;
+}
+
 .header .navbar-inner {
   background-image: none !important;
   background-color: white !important;
