--- a/theme/assets/css/custom.css
+++ b/theme/assets/css/custom.css
@@ -22,7 +22,7 @@
 
 .header .nav .dropdown-toggle:hover, 
 .header .nav .dropdown.open .dropdown-toggle {
-  background-color: #4f4f4f !important;
+  background-color: #b4dbeb !important;
 }
 
 .header .nav li.dropdown .dropdown-toggle i {
