--- a/theme/assets/css/custom.css
+++ b/theme/assets/css/custom.css
@@ -47,7 +47,12 @@
 }
 
 .page-sidebar {
-    border-top: 1px solid #e2e2e2 !important;
+    border-top: 0px solid #e2e2e2 !important;
+}
+
+.page-content
+{
+    border-left: 0px !important;
 }
 
 @media (max-width:979px) { 
